[package]
name = "dont-starve-backup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.9"
notify = "5.0.0"
serde = { version = "1.0.144", features = ["derive"] }
clap = { version = "3.2.20", features = ["derive"] }
exitcode = "1.1.2"
colored = "2.0.0"
log = "0.4.17"
env_logger = "0.9.0"
pretty_env_logger = "0.4.0"
